@@ -72,9 +72,10 @@
 - Fix: [#18009] Visual glitch with litter at edge of sloped path.
 - Fix: [#18025] Fix land ownership in Six Holland, Six Flags Magic Mountain, North America - Grand Canyon and Asia - Great Wall of China Tourism Enhancement scenarios. 
 - Fix: [#18026] Park rating drops to 0 with more than 32k guests, total ride excitement or intensity.
-- Fix: [#18051] Visual glitch with Mine Ride's large unbanked turn.
 - Fix: [#18032] All non-interactive widgets (labels, groupboxes) produce sound when clicked.
 - Fix: [#18035] Favourited servers don’t get their online status updated.
+- Fix: [#18051] Visual glitch with Mine Ride's large unbanked turn.
+- Fix: [#18059] [Plugin] Width and height of custom window not changeable via script.
 
 0.4.1 (2022-07-04)
 ------------------------------------------------------------------------
